# ouroboros

./: .coverage  .coveragerc  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.yaml  404.html  README.md  cli.spec  demo.py  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  pyinstaller.py  pyproject.toml  server.spec  sitemap.xml  tsconfig.node.json  tsconfig.web.json
.github/workflows/: build-and-release.yml  build-docs.yml  pr-coverage.yml  pr-tag.yml  python-coverage.yml
docs/: backproject.md  downloading.md  index.md  slicing.md
documentation/: mkdocs.yml
documentation/docs/: index.md
guide/backproject/: index.html
guide/downloading/: index.html
guide/plugins/: index.html
guide/slicing/: index.html
ouroboros/: __init__.py  bounding_boxes.py  cli.py  config.py  ouroboros.py  parse.py  server.py  slice.py  spline.py  volume_cache.py
ouroboros/helpers/: bounding_boxes.py  files.py  memory_usage.py  parse.py  slice.py  volume_cache.py
ouroboros/pipeline/: __init__.py  backproject_pipeline.py  load_config_pipeline.py  parse_pipeline.py  pipeline.py  pipeline_input.py  render_slices_pipeline.py  save_config_pipeline.py  save_parallel_alt_pipeline.py  save_parallel_pipeline.py  save_tiff_pipeline.py  slices_geom_pipeline.py  volume_cache_pipeline.py
plugins/plugin-template/: README.md  backend-dev.cjs  index.html  package.json  vite.config.ts
python/: .gitignore  Dockerfile  Dockerfile-prod  README.md  cli.spec  compose.yml  pyinstaller.py  pyproject.toml  server.spec
python/ouroboros/: cli.py  docker_server.py  server.py
python/ouroboros/common/: file_system.py  logging.py  pipelines.py  server.py  server_api.py  server_handlers.py  server_types.py  volume_server_interface.py
python/ouroboros/helpers/: bounding_boxes.py  config.py  coordinates.py  dataclasses.py  files.py  log.py  memory_usage.py  models.py  options.py  parse.py  shapes.py  slice.py  spline.py  util.py  volume_cache.py
python/ouroboros/pipeline/: __init__.py  backproject_pipeline.py  load_config_pipeline.py  parse_pipeline.py  pipeline.py  pipeline_input.py  save_config_pipeline.py  save_parallel_pipeline.py  save_tiff_pipeline.py  slice_parallel_pipeline.py  slices_geom_pipeline.py  volume_cache_pipeline.py
python/test/: sample_data.py  test_spline.py
python/test/helpers/: test_bounding_boxes.py  test_coordinates.py  test_files.py  test_log.py  test_memory_usage.py  test_models.py  test_options.py  test_parse.py  test_shape.py  test_slice.py  test_spline.py  test_util.py  test_volume_cache.py
resources/processes/: file-server-script.mjs  volume-server-script.mjs
search/: search_index.json
src/main/: docker.ts  events.ts  file-server.ts  helpers.ts  index.ts  logging.ts  main-server.ts  menu.ts  plugins.ts  schemas.ts
test/: test_bounding_boxes.py  test_memory_usage.py  test_spline.py
(+116 files in other folders)
