[tool.poetry]
name = "ouroboros"
version = "0.0.0"
description = ""
authors = ["Weaver Goldman <we.goldm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.13.1"
matplotlib = "^3.9.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
