[tool.poetry]
name = "ouroboros"
version = "0.0.0"
description = ""
authors = ["Weaver Goldman <we.goldm@gmail.com>"]
readme = "README.md"

# Use python 3.10
# https://stackoverflow.com/questions/60580113/change-python-version-to-3-x and run poetry install, poetry lock
[tool.poetry.dependencies]
python = "3.10.5"
numpy = "^1.26.4"
scipy = "^1.13.1"
matplotlib = "^3.9.0"
pytest = "^8.2.2"
pytest-benchmark = "^4.0.0"
cloud-volume = "^8.33.0"
tifffile = "^2024.6.18"
pydantic = "^2.7.4"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
